tests/paczka1/small_fuzzy/90077303.err
Error in line 7: A806 A806 3,87
Error in line 5: TDh S576 85,6
Error in line 1: zrafrdFlgPO A998 18,3
